--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -20,112 +20,163 @@ jobs:
       matrix:
         include:
           # Alpine Linux cross-builds (musl)
+          # amd64
           - runner_label: ubu2204
             os: linux
             arch: amd64
             name: alpine-amd64
             libc: musl
+          # arm64
           - runner_label: ubu2204
             os: linux
             arch: arm64
             name: alpine-arm64
             libc: musl
+          # i386
           - runner_label: ubu2204
             os: linux
             arch: 386
             name: alpine-i386
             libc: musl
+          # armv7
           - runner_label: ubu2204
             os: linux
             arch: arm
             name: alpine-armv7
             libc: musl
 
+          # Arch Linux cross-builds
+          # amd64
+          - runner_label: ubu2204
+            os: linux
+            arch: amd64
+            name: archlinux-amd64
+            libc: glibc
+          # arm64
+          - runner_label: ubu2204
+            os: linux
+            arch: arm64
+            name: archlinux-arm64
+            libc: glibc
+          # i386
+          - runner_label: ubu2204
+            os: linux
+            arch: 386
+            name: archlinux-i386
+            libc: glibc
+          # armv7
+          - runner_label: ubu2204
+            os: linux
+            arch: arm
+            name: archlinux-armv7
+            libc: glibc
+
           # FreeBSD cross-builds
+          # amd64
           - runner_label: ubu2204
             os: freebsd
             arch: amd64
             name: freebsd-amd64
-          - runner_label: ubu2204
-            os: freebsd
-            arch: 386
-            name: freebsd-i386
-          - runner_label: ubu2204
-            os: freebsd
-            arch: arm
-            name: freebsd-armv7
+          # arm64
           - runner_label: ubu2204
             os: freebsd
             arch: arm64
             name: freebsd-arm64
+          # i386
+          - runner_label: ubu2204
+            os: freebsd
+            arch: 386
+            name: freebsd-i386
+          # armv7
+          - runner_label: ubu2204
+            os: freebsd
+            arch: arm
+            name: freebsd-armv7
+
 
           # OpenBSD cross-builds
+          # amd64
           - runner_label: ubu2204
             os: openbsd
             arch: amd64
             name: openbsd-amd64
-          - runner_label: ubu2204
-            os: openbsd
-            arch: 386
-            name: openbsd-i386
+          # arm64
           - runner_label: ubu2204
             os: openbsd
             arch: arm64
             name: openbsd-arm64
+          # i386
+          - runner_label: ubu2204
+            os: openbsd
+            arch: 386
+            name: openbsd-i386
+
 
           # NetBSD cross-builds
+          # amd64
           - runner_label: ubu2204
             os: netbsd
             arch: amd64
             name: netbsd-amd64
-          - runner_label: ubu2204
-            os: netbsd
-            arch: 386
-            name: netbsd-i386
-          - runner_label: ubu2204
-            os: netbsd
-            arch: arm
-            name: netbsd-armv7
+          # arm64
           - runner_label: ubu2204
             os: netbsd
             arch: arm64
             name: netbsd-arm64
+          # i386
+          - runner_label: ubu2204
+            os: netbsd
+            arch: 386
+            name: netbsd-i386
+          # armv7
+          - runner_label: ubu2204
+            os: netbsd
+            arch: arm
+            name: netbsd-armv7
 
           # macOS cross-builds
+          # amd64
           - runner_label: ubu2204
             os: darwin
             arch: amd64
             name: macos-amd64
+          # arm64
           - runner_label: ubu2204
             os: darwin
             arch: arm64
             name: macos-arm64
 
           # Windows cross-builds
+          # amd64
           - runner_label: ubu2204
             os: windows
             arch: amd64
             name: windows-amd64
+          # arm64
           - runner_label: ubu2204
             os: windows
             arch: arm64
             name: windows-arm64
+          # i386
           - runner_label: ubu2204
             os: windows
             arch: 386
             name: windows-i386
 
           # Debian 10-12 self-hosted builds amd64
+          # amd64
           - runner_label: deb10
             os: linux
             arch: amd64
             name: debian-10-amd64
             libc: glibc
+          # amd64
           - runner_label: deb11
             os: linux
             arch: amd64
             name: debian-11-amd64
             libc: glibc
+          # amd64
           - runner_label: deb12
             os: linux
             arch: amd64
@@ -133,16 +184,19 @@ jobs:
             libc: glibc
 
           # Debian 10-12 self-hosted builds arm64
+          # arm64
           - runner_label: deb10
             os: linux
             arch: arm64
             name: debian-10-arm64
             libc: glibc
+          # arm64
           - runner_label: deb11
             os: linux
             arch: arm64
             name: debian-11-arm64
             libc: glibc
+          # arm64
           - runner_label: deb12
             os: linux
             arch: arm64
@@ -150,16 +204,19 @@ jobs:
             libc: glibc
 
           # Debian 10-12 self-hosted builds 32-bit ARM
+          # armv7
           - runner_label: deb10
             os: linux
             arch: arm
             name: debian-10-armv7
             libc: glibc
+          # armv7
           - runner_label: deb11
             os: linux
             arch: arm
             name: debian-11-armv7
             libc: glibc
+          # armv7
           - runner_label: deb12
             os: linux
             arch: arm
@@ -167,16 +224,19 @@ jobs:
             libc: glibc
 
           # Debian 10-12 self-hosted builds i386
+          # i386
           - runner_label: deb10
             os: linux
             arch: 386
             name: debian-10-i386
             libc: glibc
+          # i386
           - runner_label: deb11
             os: linux
             arch: 386
             name: debian-11-i386
             libc: glibc
+          # i386
           - runner_label: deb12
             os: linux
             arch: 386
@@ -184,16 +244,19 @@ jobs:
             libc: glibc
 
           # Ubuntu 20.04 - 24.04 self-hosted builds amd64
+          # amd64
           - runner_label: ubu2004
             os: linux
             arch: amd64
             name: ubuntu-20.04-amd64
             libc: glibc
+          # amd64
           - runner_label: ubu2204
             os: linux
             arch: amd64
             name: ubuntu-22.04-amd64
             libc: glibc
+          # amd64
           - runner_label: ubu2404
             os: linux
             arch: amd64
@@ -201,16 +264,19 @@ jobs:
             libc: glibc
 
           # Ubuntu 20.04 - 24.04 self-hosted builds arm64
+          # arm64
           - runner_label: ubu2004
             os: linux
             arch: arm64
             name: ubuntu-20.04-arm64
             libc: glibc
+          # arm64
           - runner_label: ubu2204
             os: linux
             arch: arm64
             name: ubuntu-22.04-arm64
             libc: glibc
+          # arm64
           - runner_label: ubu2404
             os: linux
             arch: arm64
@@ -218,16 +284,19 @@ jobs:
             libc: glibc
 
           # Ubuntu 20.04 - 24.04 self-hosted builds 32-bit ARM
+          # armv7
           - runner_label: ubu2004
             os: linux
             arch: arm
             name: ubuntu-20.04-armv7
             libc: glibc
+          # armv7
           - runner_label: ubu2204
             os: linux
             arch: arm
             name: ubuntu-22.04-armv7
             libc: glibc
+          # armv7
           - runner_label: ubu2404
             os: linux
             arch: arm
@@ -235,16 +304,19 @@ jobs:
             libc: glibc
 
           # Ubuntu 20.04 - 24.04 self-hosted builds i386
+          # i386
           - runner_label: ubu2004
             os: linux
             arch: 386
             name: ubuntu-20.04-i386
             libc: glibc
+          # i386
           - runner_label: ubu2204
             os: linux
             arch: 386
             name: ubuntu-22.04-i386
             libc: glibc
+          # i386
           - runner_label: ubu2404
             os: linux
             arch: 386
