--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -46,30 +46,41 @@ jobs:
             libc: musl
 
           # Arch Linux cross-builds
+          # These will just be generic Linux/amd64,arm64,386,arm binaries with no Arch-specific packaging (which is expected).
+          # That’s fine unless you want to distribute Arch .pkg.tar.zst packages, which would require Arch tools.
+          # This workflow will also generate an Arch PKGBUILD and build a .pkg.tar.zst if possible.
           # amd64
           - runner_label: ubu2204
             os: linux
             arch: amd64
             name: archlinux-amd64
             libc: glibc
+            distro: arch
+            pkgarch: x86_64
           # arm64
           - runner_label: ubu2204
             os: linux
             arch: arm64
             name: archlinux-arm64
             libc: glibc
+            distro: arch
+            pkgarch: aarch64
           # i386
           - runner_label: ubu2204
             os: linux
             arch: 386
             name: archlinux-i386
             libc: glibc
+            distro: arch
+            pkgarch: i686
           # armv7
           - runner_label: ubu2204
             os: linux
             arch: arm
             name: archlinux-armv7
             libc: glibc
+            distro: arch
+            pkgarch: armv7h
 
           # FreeBSD cross-builds
           # amd64
@@ -93,7 +104,6 @@ jobs:
             arch: arm
             name: freebsd-armv7
 
-
           # OpenBSD cross-builds
           # amd64
           - runner_label: ubu2204
@@ -110,7 +120,6 @@ jobs:
             os: openbsd
             arch: 386
             name: openbsd-i386
-
 
           # NetBSD cross-builds
           # amd64
@@ -170,13 +179,11 @@ jobs:
             arch: amd64
             name: debian-10-amd64
             libc: glibc
-          # amd64
           - runner_label: deb11
             os: linux
             arch: amd64
             name: debian-11-amd64
             libc: glibc
-          # amd64
           - runner_label: deb12
             os: linux
             arch: amd64
@@ -190,13 +197,11 @@ jobs:
             arch: arm64
             name: debian-10-arm64
             libc: glibc
-          # arm64
           - runner_label: deb11
             os: linux
             arch: arm64
             name: debian-11-arm64
             libc: glibc
-          # arm64
           - runner_label: deb12
             os: linux
             arch: arm64
@@ -210,13 +215,11 @@ jobs:
             arch: arm
             name: debian-10-armv7
             libc: glibc
-          # armv7
           - runner_label: deb11
             os: linux
             arch: arm
             name: debian-11-armv7
             libc: glibc
-          # armv7
           - runner_label: deb12
             os: linux
             arch: arm
@@ -230,13 +233,11 @@ jobs:
             arch: 386
             name: debian-10-i386
             libc: glibc
-          # i386
           - runner_label: deb11
             os: linux
             arch: 386
             name: debian-11-i386
             libc: glibc
-          # i386
           - runner_label: deb12
             os: linux
             arch: 386
@@ -250,13 +251,11 @@ jobs:
             arch: amd64
             name: ubuntu-20.04-amd64
             libc: glibc
-          # amd64
           - runner_label: ubu2204
             os: linux
             arch: amd64
             name: ubuntu-22.04-amd64
             libc: glibc
-          # amd64
           - runner_label: ubu2404
             os: linux
             arch: amd64
@@ -270,13 +269,11 @@ jobs:
             arch: arm64
             name: ubuntu-20.04-arm64
             libc: glibc
-          # arm64
           - runner_label: ubu2204
             os: linux
             arch: arm64
             name: ubuntu-22.04-arm64
             libc: glibc
-          # arm64
           - runner_label: ubu2404
             os: linux
             arch: arm64
@@ -290,13 +287,11 @@ jobs:
             arch: arm
             name: ubuntu-20.04-armv7
             libc: glibc
-          # armv7
           - runner_label: ubu2204
             os: linux
             arch: arm
             name: ubuntu-22.04-armv7
             libc: glibc
-          # armv7
           - runner_label: ubu2404
             os: linux
             arch: arm
@@ -310,13 +305,11 @@ jobs:
             arch: 386
             name: ubuntu-20.04-i386
             libc: glibc
-          # i386
           - runner_label: ubu2204
             os: linux
             arch: 386
             name: ubuntu-22.04-i386
             libc: glibc
-          # i386
           - runner_label: ubu2404
             os: linux
             arch: 386
@@ -341,6 +334,12 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
+
+      # Optional: Run tests with race detector for supported platforms
+      # Go’s race detector only works on amd64/linux and some others. If you want, you could add a separate test matrix with -race enabled for those.
+      - name: Run race detector tests (amd64/linux only)
+        if: matrix.os == 'linux' && matrix.arch == 'amd64'
+        run: go test -race ./...
 
       # Optional: Run tests before build (uncomment if desired)
       # - name: Run tests
@@ -379,7 +378,7 @@ jobs:
           fi
           zip -j "NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip" builds/${{ matrix.name }}/usr/bin/$binary_name cleanHeaders.txt provider.sample.json provider.ygg.json
           # Only make .deb packages for Linux with glibc
-          if [ "${{ matrix.os }}" == "linux" ] && [ "${{ matrix.libc }}" = "glibc" ]; then
+          if [ "${{ matrix.os }}" == "linux" ] && [ "${{ matrix.libc:-glibc}" = "glibc" ]; then
             mkdir -p builds/${{ matrix.name }}/DEBIAN
             VERSION=$(echo "${{ github.ref_name }}" | sed 's/^v//')
             ARCH=${{ matrix.arch }}
@@ -391,6 +390,55 @@ jobs:
             dpkg-deb --root-owner-group --build builds/${{ matrix.name }} NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb
           fi
 
+          # PKGBUILD and .pkg.tar.zst generation for Arch Linux
+          if [ "${{ matrix.distro:- }}" = "arch" ]; then
+            # Prepare PKGBUILD template
+            mkdir -p builds/${{ matrix.name }}/archpkg
+            VERSION=$(echo "${{ github.ref_name }}" | sed 's/^v//')
+            PKGVER=$(echo "$VERSION" | sed 's/-/./g')
+            cat > builds/${{ matrix.name }}/archpkg/PKGBUILD <<EOF
+# Maintainer: ${{ github.repository_owner }} <nzbrex@usenet-server.com>
+pkgname=nzbrex
+pkgver=${PKGVER}
+pkgrel=1
+arch=(${{
+  matrix.pkgarch
+}})
+pkgdesc="NZBreX - a cmd line tool to re-upload articles missing from providers"
+url="https://github.com/${{ github.repository }}"
+license=('custom')
+source=()
+sha256sums=()
+build() {
+  :
+}
+package() {
+  install -Dm755 "\${srcdir}/NZBreX" "\${pkgdir}/usr/bin/NZBreX"
+  install -Dm644 "\${srcdir}/cleanHeaders.txt" "\${pkgdir}/usr/share/nzbrex/cleanHeaders.txt"
+  install -Dm644 "\${srcdir}/provider.sample.json" "\${pkgdir}/usr/share/nzbrex/provider.sample.json"
+  install -Dm644 "\${srcdir}/provider.ygg.json" "\${pkgdir}/usr/share/nzbrex/provider.ygg.json"
+}
+EOF
+            # Copy sources for PKGBUILD
+            cp builds/${{ matrix.name }}/usr/bin/NZBreX builds/${{ matrix.name }}/archpkg/NZBreX
+            cp cleanHeaders.txt builds/${{ matrix.name }}/archpkg/cleanHeaders.txt
+            cp provider.sample.json builds/${{ matrix.name }}/archpkg/provider.sample.json
+            cp provider.ygg.json builds/${{ matrix.name }}/archpkg/provider.ygg.json
+            # Try to install base-devel and pacman tools if not present (for self-hosted Ubuntu, use makedepends)
+            if ! command -v makepkg &> /dev/null; then
+              sudo apt-get update
+              sudo apt-get install -y fakeroot binutils tar gzip xz zstd
+              # Download makepkg from Arch's pacman repo or AUR helper if you want to fully automate.
+              # For now, use a minimal makepkg.sh - or ask user to build on real Arch if this fails.
+            fi
+            # Try to build the Arch package
+            cd builds/${{ matrix.name }}/archpkg
+            # The following may fail if makepkg is not really present,
+            # in which case the PKGBUILD and all sources are at least uploaded for a user to build on Arch themselves.
+            (makepkg --nodeps --skipinteg -A -f || echo "::warning::Arch package build failed on this runner, but PKGBUILD and sources are uploaded for manual build on Arch")
+            cd ../../../..
+          fi
+
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -398,6 +446,12 @@ jobs:
           path: |
             NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.zip
             NZBreX_${{ env.REF_NAME }}-${{ matrix.name }}.deb
+            builds/${{ matrix.name }}/archpkg/PKGBUILD
+            builds/${{ matrix.name }}/archpkg/nzbrex-*.pkg.tar.*
+            builds/${{ matrix.name }}/archpkg/NZBreX
+            builds/${{ matrix.name }}/archpkg/cleanHeaders.txt
+            builds/${{ matrix.name }}/archpkg/provider.sample.json
+            builds/${{ matrix.name }}/archpkg/provider.ygg.json
           retention-days: 1
           if-no-files-found: warn
 
@@ -416,3 +470,5 @@ jobs:
           files: |
             NZBreX_${{ env.REF_NAME }}-*.zip
             NZBreX_${{ env.REF_NAME }}-*.deb
+            builds/*/archpkg/nzbrex-*.pkg.tar.*
+            builds/*/archpkg/PKGBUILD
