--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -395,14 +395,13 @@ jobs:
             mkdir -p builds/${{ matrix.name }}/archpkg
             VERSION=$(echo "${{ github.ref_name }}" | sed 's/^v//')
             PKGVER=$(echo "$VERSION" | sed 's/-/./g')
+            PKGARCH="${{ matrix.pkgarch }}"
             cat > builds/${{ matrix.name }}/archpkg/PKGBUILD <<EOF
 # Maintainer: ${{ github.repository_owner }} <nzbrex@usenet-server.com>
 pkgname=nzbrex
 pkgver=${PKGVER}
 pkgrel=1
-arch=(${{
-  matrix.pkgarch
-}})
+arch=($PKGARCH)
 pkgdesc="NZBreX - a cmd line tool to re-upload articles missing from providers"
 url="https://github.com/${{ github.repository }}"
 license=('custom')
@@ -454,20 +453,20 @@ EOF
 #          retention-days: 1
 #          if-no-files-found: warn
 
-      - name: Upload Binary (optional)
-        uses: actions/upload-artifact@v4
-        with:
-          name: binary-${{ matrix.name }}
-          path: builds/${{ matrix.name }}/usr/bin/*
-          retention-days: 1
-          if-no-files-found: warn
+#      - name: Upload Binary (optional)
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: binary-${{ matrix.name }}
+#          path: builds/${{ matrix.name }}/usr/bin/*
+#          retention-days: 1
+#          if-no-files-found: warn
 
-      - name: Upload Release Assets
-        if: github.event_name == 'release'
-        uses: softprops/action-gh-release@v2
-        with:
-          files: |
-            NZBreX_${{ env.REF_NAME }}-*.zip
-            NZBreX_${{ env.REF_NAME }}-*.deb
-            builds/*/archpkg/nzbrex-*.pkg.tar.*
-            builds/*/archpkg/PKGBUILD
+#      - name: Upload Release Assets
+#        if: github.event_name == 'release'
+#        uses: softprops/action-gh-release@v2
+#        with:
+#          files: |
+#            NZBreX_${{ env.REF_NAME }}-*.zip
+#            NZBreX_${{ env.REF_NAME }}-*.deb
+#            builds/*/archpkg/nzbrex-*.pkg.tar.*
+#            builds/*/archpkg/PKGBUILD
